[style] fix newsletter input

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -374,8 +374,8 @@ main {
                 font-size: 16px;
                 line-height: 20px;
                 color: #878588;
-                padding: 0.5rem 1rem;
                 margin-right: 0.5rem;
+                height: 3rem;
               }
               input::placeholder {
                 font-family: "Neue Plak";
