--- a/styles/global.scss
+++ b/styles/global.scss
@@ -73,3 +73,47 @@ body {
     );
   }
 }
+
+footer {
+  margin-top: 6rem;
+  background: #093a3a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  div {
+    width: 40vw;
+    ul {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin: 5rem 0;
+      li {
+        font-family: "Retroica";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 36px;
+        text-transform: uppercase;
+        color: #ffffff;
+      }
+    }
+    div {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      flex-direction: column;
+      font-family: "Retroica";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 36px;
+      text-transform: uppercase;
+      color: #ffffff;
+      margin: 3rem 0;
+      p:first-child {
+        margin-bottom: 1rem;
+      }
+    }
+  }
+}
