[feature] lien témoignage page détaillé

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "copacanaba";
+  src: url("https://use.typekit.net/zkf2zix.css");
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   font-family: "Neue Plak", sans-serif;
   font-weight: 400;
