--- a/styles/testimony.scss
+++ b/styles/testimony.scss
@@ -72,10 +72,74 @@ main#add-container {
       padding: 0;
     }
   }
-  #display-image {
+}
+
+main#read-container{
+  > section{
+    margin-top: 200px;
     width: 100%;
-    height: 300px;
-    margin-bottom: 20px;
-    background-color: #fff;
+    min-height: 100vh;
+    > article:last-child{
+      margin-top: 50px;
+    }
+    > article:first-child{
+      height: 50vh;
+      width: 70%;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      >div:first-child{
+        width:30%;
+        height: 100%;
+        display: flex;
+        align-items: flex-end;
+        position: relative;
+        > div{
+          padding: 30px;
+        }
+        > div:first-child{
+          position: absolute;
+          width: 700px;
+          
+          top: 40px;
+          h2{
+            font-size: 3rem;
+            font-weight: bold;
+            font-style: italic;
+            color:#106666;
+          }
+          
+        }
+        h4{
+          font-size: 2.3rem;
+          font-weight: bold;
+        }
+
+      }
+      >div:last-child{
+        width:70% ;
+        display: flex;
+       
+        >div{
+          height: 60%;
+        }
+        > div:first-child{
+          height: 100%;
+        }
+      }
+    }
   }
+  .ce-block__content{
+    max-width: 70%;
+  }
+  .img{
+    height: 100%;
+    .img-div{
+      width:calc(100% / 3);
+      background-position: center;
+      background-size: cover;
+    }
+
+  }
+  
 }
