--- a/styles/quiz.scss
+++ b/styles/quiz.scss
@@ -63,6 +63,7 @@ main {
                 padding: 1rem 2rem;
                 border-radius: 5px;
                 transition: all 0.3s ease-in-out;
+                display: block;
 
                 &:hover {
                     background-color: #198585;
@@ -324,3 +325,53 @@ main {
     background-color: black;
   }
 
+
+main#results{
+    > section{
+        article{
+            width: 80%;
+            > div{
+                display: flex;
+                align-items: center;
+                margin-top: 60px;
+                gap: 40px;
+                width: 100%;
+                .travel{
+                    width: 100%;
+                    height:450px;
+                    position: relative;
+                  
+                    .travel-img{
+                        border-radius: 10px 10px 0px 0px;
+                        height: 60%;
+                        background-size: cover;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                    }
+                    .travel-info{
+                        padding: 5px;
+                        background-color: #169D9D;
+                        border-radius: 0px 0px 10px 10px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        > div:first-child{
+                            padding: 20px;
+                        }
+                        h2{
+                            font-size: 1.3rem;
+                            font-weight: bold;
+                            color: #fff;
+                            margin-bottom: 10px;
+
+                        }
+                        p{
+                            font-size: 1rem;
+                            color: #fff;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
