--- a/styles/main.scss
+++ b/styles/main.scss
@@ -320,7 +320,7 @@ main {
           }
           p {
             margin: 10px 0px;
-            font-weight: 200;
+            font-weight: 400;
           }
         }
       }
@@ -513,4 +513,44 @@ main {
   font-style: normal;
   font-weight: 400;
   font-size: 1.2rem;
+}
+
+main#privacy{
+    section{
+        width: 80%;
+        margin: 0 auto;
+    }
+    section:first-child{
+      width: 100%;
+      height: 70vh;
+      background-color: #093A3A;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      h1,h2{
+        color: #fff;
+      }
+    }
+    section:not(section:first-child){
+      margin-top:80px ;
+      p{
+        font-size: 1rem;
+      }
+      h2{
+        margin-bottom: 10px;
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+      }
+      h3{
+        margin-bottom: 10px !important;
+        font-size: 1.4rem;
+        margin-bottom: 10px;
+      }
+      h4{
+        font-size: 1.3rem;
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+    }
+    
 }
