--- a/styles/connect.scss
+++ b/styles/connect.scss
@@ -8,6 +8,7 @@ body {
   margin-top: 8rem;
   justify-content: space-between;
   overflow-y: hidden;
+  align-items: center;
   .connect-container {
     display: flex;
     justify-content: center;
